# remi-moe-back

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml  Rocket.toml.example  update_front.bat  update_front.sh
migrations/2019-10-10-010249_get_games/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: mod.rs  models.rs
src/routes/: get.rs  mod.rs  static_files.rs
