[package]
name = "remi-back"
version = "0.1.0"
authors = ["nalleyer <nalleyer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
rocket = "0.4.2"
dotenv = "0.14"
diesel = {version = "1", features = ["chrono", "mysql"]}
serde = {version = "1", features = ["derive"]}


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_mysql_pool", "json"]